# SmartyMate

./: CMakeLists.txt  README.md
include/: DesktopMate.h
src/: DesktopMate.cxx  main.cxx
